--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,6 @@ jobs:
     matrix:
       Python35:
         python.version: '3.5'
-      Python36:
-        python.version: '3.6'
-      Python37:
-        python.version: '3.7'
     maxParallel: 4
 
   steps:
@@ -43,5 +39,5 @@ jobs:
       versionSpec: '3.x'
       architecture: 'x64'
 
-  - script: python setup.py sdist
-    displayName: 'Build sdist'
+#  - script: python setup.py sdist
+#    displayName: 'Build sdist'
